# hierarchical_control_from_latent_poc

./: .gitignore  EXPERIMENT_REPORT.md  FINAL_RESULTS_AND_CANDIDATES.md  INCREMENTAL_EXPERIMENT_LOG.md  LEARNED_INTERFACE_FINAL_RESULTS.md  README.md  VAE512_SAMPLE_EFFICIENCY_FINAL_RESULTS.md  hcl_effect32_budget_and_scratch_rl_plan.md  hcl_next_current_results.md  hcl_next_experiment_log.md  hcl_next_experiments_plan.md  hcl_next_methods_explainer.md  learned_interface_experiment_log.md  learned_interface_experiment_plan.md  low_level_rl_config_table.csv  low_level_rl_experiment_log.md  low_level_rl_final_results.md  low_level_rl_rerun_state_parallel_plan.md  low_level_rl_tuning_plan.md  next_experiments_log.md  object_tcp_nojoint_lowlevel_plan.md  oracle_goal_decomposition.csv  pre_rl_summary.md  privileged_z_rl_experiment_log.md  privileged_z_rl_experiment_plan.md  privileged_z_supervised_smoke_summary.json  privileged_z_three_experiment_summary.json  pusht_incremental_experiment_plan.md  pusht_pre_rl_next_experiments_plan.md  pyproject.toml  recovery_dataset_spec.md  representation_geometry_report.md  rl_reachability_debug_experiment_log.md  rl_reachability_debug_final_results.md  rl_reachability_debug_final_summary.md  rl_reachability_debug_plan.md  rl_rerun_action_block_prediction_seed0_8192_2048.json  rl_rerun_algorithm_audit.json  rl_rerun_algorithm_audit.md  rl_rerun_completion_audit.md  (+66 more)
configs/: pusht.yaml  pusht_incremental.yaml  pusht_spatial.yaml  pusht_spatial_wm_512.yaml  pusht_spatial_wm_h1.yaml  pusht_spatial_wm_recon512.yaml  pusht_spatial_wm_short.yaml  (+4 more)
(+213 files in other folders)
