[project]
name = "hierarchical-control-latent-poc"
version = "0.1.0"
description = "Push-T proof of concept for future-latent hierarchical flow policies."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "gymnasium>=0.29",
    "h5py>=3.11",
    "mani-skill>=3.0.0",
    "matplotlib>=3.8",
    "numpy>=1.26",
    "pandas>=2.2",
    "pillow>=10.3",
    "pyyaml>=6.0",
    "rich>=13.7",
    "torch>=2.4",
    "torchvision>=0.19",
    "tqdm>=4.66",
    "transformers>=4.43",
]

[project.scripts]
hcl-poc = "hcl_poc.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.2",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hcl_poc"]

[tool.ruff]
line-length = 100
target-version = "py311"

